--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Proclet
 
+0.02    Thu Jun 14 23:13:17 2012
+        - Fixed test. Check `ps`
+
 0.01    Thu Jun 14 00:40:41 2012
         - original version
