Checking in changes prior to tagging of version 0.03.
Changelog diff is:

diff --git a/Changes b/Changes
index cf48621..471a9d9 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet

+0.03    Thu Jun 15 02:09:20 2012
+        - More ixed test.
+
 0.02    Thu Jun 14 23:13:17 2012
         - Fixed test. Check `ps`

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.03    Thu Jun 15 02:09:20 2012
+        - More ixed test.
+
 0.02    Thu Jun 14 23:13:17 2012
         - Fixed test. Check `ps`
 
