Checking in changes prior to tagging of version 0.05.
Changelog diff is:

diff --git a/Changes b/Changes
index 91ad376..9a990c4 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet

+0.05    Fri Jun 15 15:33:11 2012
+        - fixed test. using ps -A instead of '-e'. -e means 'print enviroment value' in FreeBSD
+
 0.04    Thu Jun 15 02:09:20 2012
         - fixed test. remove whitespaces at begining of a line

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.05    Fri Jun 15 15:33:11 2012
+        - fixed test. using ps -A instead of '-e'. -e means 'print enviroment value' in FreeBSD
+
 0.04    Thu Jun 15 02:09:20 2012
         - fixed test. remove whitespaces at begining of a line
 
