--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.06    Mon Jul 23 15:47:15 2012
+        - added spawn_interval and err_respawn_interval attributes
+
 0.05    Fri Jun 15 15:33:11 2012
         - fixed test. using ps -A instead of '-e'. -e means 'print enviroment value' in FreeBSD
 
