Checking in changes prior to tagging of version 0.07.
Changelog diff is:

diff --git a/Changes b/Changes
index 24f7a76..6b5d82f 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet

+0.07    Thu Jun 15 02:09:20 2012
+        - fixed test. for kfreebsd-gnu
+
 0.06    Mon Jul 23 15:47:15 2012
         - added spawn_interval and err_respawn_interval attributes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.07    Thu Jun 15 02:09:20 2012
+        - fixed test. for kfreebsd-gnu
+
 0.06    Mon Jul 23 15:47:15 2012
         - added spawn_interval and err_respawn_interval attributes
 
