Checking in changes prior to tagging of version 0.08.
Changelog diff is:

diff --git a/Changes b/Changes
index 6b5d82f..9d1b874 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Proclet

+0.08    Mon Aug 6 23:24:11 2012
+        - fixed test. using Parallel::Scoreboard
+          some platform doesn't support rename proc title
+
 0.07    Thu Jun 15 02:09:20 2012
         - fixed test. for kfreebsd-gnu

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Proclet
 
+0.08    Mon Aug 6 23:24:11 2012
+        - fixed test. using Parallel::Scoreboard
+          some platform doesn't support rename proc title
+
 0.07    Thu Jun 15 02:09:20 2012
         - fixed test. for kfreebsd-gnu
 
