--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.09    Fri Aug 31 12:27:15
+        - Supports formating stdout,stderr from services
+
 0.08    Mon Aug 6 23:24:11 2012
         - fixed test. using Parallel::Scoreboard
           some platform doesn't support rename proc title
