--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.12    Thu Sep 13 2:19:33
+        - Added Proclet::Declare
+
 0.11    Tue Sep 11 13:50:23
         - Added proclet command. foreman for perl
 
