--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Proclet
 
+0.19    Tue Dec 11 16:31:33 2012
+        - start services by defined order
+
 0.18    Sat Nov 17 1:12:30 2012
         - start up logworker at first
 
