Checking in changes prior to tagging of version 0.22.
Changelog diff is:

diff --git a/Changes b/Changes
index 95bdeaf..4b1d8b4 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Proclet

+0.22    Tue Feb 12 12:33:01 2013
+        - bug fixed, select loop around logger
+        - fixed test. check logfile size instead of sleeping
+
 0.21    Fri Feb 1 17:14:17 2013
         - supports String and ArrayRef service in Proclet.pm

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Proclet
 
+0.22    Tue Feb 12 12:33:01 2013
+        - bug fixed, select loop around logger
+        - fixed test. check logfile size instead of sleeping 
+
 0.21    Fri Feb 1 17:14:17 2013
         - supports String and ArrayRef service in Proclet.pm
 
